--- a/css/style.css
+++ b/css/style.css
@@ -366,7 +366,6 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   font-weight: 500;
-  font-size: 30px;
 }
 .alert__middle {
   height: 30%;
@@ -398,7 +397,6 @@ body {
 .alert__middle-title {
   color: rgb(255, 0, 0);
   font-weight: 700;
-  font-size: 40px;
 }
 .alert__botttom {
   height: 50%;
@@ -417,12 +415,6 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   font-weight: 600;
-  font-size: 36px;
-}
-@media (max-width: 768px) {
-  .alert__botttom {
-    font-size: 28px;
-  }
 }
 .alert__bottom-white {
   color: #fff;
@@ -431,6 +423,36 @@ body {
   color: #000000;
 }
 
+@supports (font-size: clamp(2.5rem, 1.6440217391rem + 3.8043478261vw, 4.6875rem)) {
+  .alert__header {
+    font-size: clamp(2.5rem, 1.6440217391rem + 3.8043478261vw, 4.6875rem);
+  }
+}
+@supports not (font-size: clamp(2.5rem, 1.6440217391rem + 3.8043478261vw, 4.6875rem)) {
+  .alert__header {
+    font-size: calc(2.5rem + 2.1875 * (100vw - 22.5rem) / 57.5);
+  }
+}
+@supports (font-size: clamp(3.125rem, 1.4130434783rem + 7.6086956522vw, 7.5rem)) {
+  .alert__middle-title {
+    font-size: clamp(3.125rem, 1.4130434783rem + 7.6086956522vw, 7.5rem);
+  }
+}
+@supports not (font-size: clamp(3.125rem, 1.4130434783rem + 7.6086956522vw, 7.5rem)) {
+  .alert__middle-title {
+    font-size: calc(3.125rem + 4.375 * (100vw - 22.5rem) / 57.5);
+  }
+}
+@supports (font-size: clamp(2.5rem, 1.5217391304rem + 4.347826087vw, 5rem)) {
+  .alert__botttom {
+    font-size: clamp(2.5rem, 1.5217391304rem + 4.347826087vw, 5rem);
+  }
+}
+@supports not (font-size: clamp(2.5rem, 1.5217391304rem + 4.347826087vw, 5rem)) {
+  .alert__botttom {
+    font-size: calc(2.5rem + 2.5 * (100vw - 22.5rem) / 57.5);
+  }
+}
 @-webkit-keyframes imageAnimation {
   0% {
     -webkit-transform: scale(1);
@@ -445,7 +467,6 @@ body {
             transform: scale(1);
   }
 }
-
 @keyframes imageAnimation {
   0% {
     -webkit-transform: scale(1);
